--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,6 +1,5 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import Layout from "../layouts/Layout.astro";
 ---
-<Layout>
-     hello@formosatea.club
-</Layout>
+
+<Layout> hello@formosatea.club </Layout>
