--- a/src/pages/tea.astro
+++ b/src/pages/tea.astro
@@ -63,7 +63,7 @@ import Layout from "../layouts/Layout.astro";
                 sea level
             </p>
             <p class="tea-scene">
-                Early spring in the forest, soft light through the curtains.
+                Early spring in the forest, gentle glow through the curtains.
             </p>
             <p class="tea-description">
                 Foraged from rare and wild native Taiwanese species <em>Camellia formosensis</em>, this delicate
@@ -97,10 +97,10 @@ import Layout from "../layouts/Layout.astro";
                 above sea level
             </p>
             <p class="tea-scene">
-                Summer afternoons, golden light, laughter in the background.
+                Summer afternoons, golden shimmer, laughter in the background.
             </p>
             <p class="tea-description">
-                This <em>Jin Xuan</em> milk oolong from Alishan is creamy and light,
+                This <em>Jin Xuan</em> milk oolong from Alishan is creamy and uplifting,
                 with notes of sweet popcorn, toasted grain, and molasses. A comforting
                 and joyful finish.
             </p>
@@ -134,7 +134,7 @@ import Layout from "../layouts/Layout.astro";
             <p class="tea-description">
                 Fully fermented and grown beneath Lalashan's forest canopy, this
                 tea opens with a dry, woody note before revealing mellow orchard
-                fruit and soft cypress needles.
+                fruit and lush cypress needles.
             </p>
         </article>
     </section>
