--- a/src/pages/tea.astro
+++ b/src/pages/tea.astro
@@ -85,7 +85,7 @@ import Layout from "../layouts/Layout.astro";
             <p class="tea-description">
                 Grown in red laterite soil and picked in the cooler months, this <em
                     >Sijichun</em
-                > oolong is naturally sweet, floral, and sleek. A gently restorative
+                > oolong is naturally sweet, floral, and sleek. A soothingly restorative
                 tea to clear the air.
             </p>
         </article>
