--- a/src/pages/tea.astro
+++ b/src/pages/tea.astro
@@ -85,7 +85,7 @@ import Layout from "../layouts/Layout.astro";
             <p class="tea-description">
                 Grown in red laterite soil and picked in the cooler months, this <em
                     >Sijichun</em
-                > oolong is naturally sweet, floral, and sleek. A soothingly restorative
+                > oolong is naturally floral and sleek. A soothingly restorative
                 tea to clear the air.
             </p>
         </article>
@@ -101,7 +101,7 @@ import Layout from "../layouts/Layout.astro";
             </p>
             <p class="tea-description">
                 This <em>Jin Xuan</em> milk oolong from Alishan is creamy and uplifting,
-                with notes of sweet popcorn, toasted grain, and molasses. A comforting
+                with notes of popcorn, toasted grain, and molasses. A comforting
                 and joyful finish.
             </p>
         </article>
